# challange_tendara

./: .gitignore  Problem Statement.md  README.md  pyproject.toml
tendara_ai_challenge/Chroma/: Chroma.py  LLM.py  digest.py
tendara_ai_challenge/data/: notices.json
tendara_ai_challenge/matching/: Chroma.py  config.yaml  digest.py  main.py  matching.py  models.py  search_profile.py  utils.py
tests/: test_load_notices.py
